[package]
name = "rust-server-wallets"
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
description = "Server-side wallet management examples using the Dynamic Rust SDK."
publish = false

[lib]
name = "rust_server_wallets"
path = "src/lib.rs"

[dependencies]
# Dynamic Rust SDK — published on crates.io. Pinned with `=` while the
# SDK is still in 0.0.x; minor bumps may be breaking until 0.1.0.
dynamic-waas-sdk      = "=0.0.3"
dynamic-waas-sdk-evm  = "=0.0.3"
dynamic-waas-sdk-svm  = "=0.0.3"

# Async runtime / utilities.
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
futures     = "0.3"

# CLI parsing — small and well-known.
clap        = { version = "4", features = ["derive"] }

# Env loading.
dotenvy     = "0.15"

# JSON storage + (de)serialisation.
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Logging.
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hex + base58 for stash/display.
hex         = "0.4"
bs58        = "0.5"

# Solana transactions serialise via bincode — same convention solana-sdk
# uses internally and the wire format the cluster expects.
bincode     = "1.3"

# Time.
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Error handling.
anyhow      = "1"
thiserror   = "2"

# `rand` for the omnibus demo (random USDC amounts).
rand        = "0.9"

# alloy — EVM types, EIP-712 hashing, RLP tx encoding, JSON-RPC provider.
# Features:
#   * consensus / network / rpc-types-eth — TxLegacy + Signed + RPC types
#   * provider-http / transport-http      — broadcast against EVM_RPC_URL
#   * dyn-abi-eip712                      — runtime EIP-712 hashing
alloy = { version = "0.8", features = [
    "consensus",
    "network",
    "rpc-types-eth",
    "provider-http",
    "providers",
    "transport-http",
    "dyn-abi",
    "eip712",
    "eips",
    "k256",
    "rlp",
] }

# Solana SDK + JSON-RPC client. Mirrors the `gagliardetto/solana-go`
# choice in the Go example.
solana-sdk      = "2"
solana-client   = "2"

# k256 — ECDSA recovery for off-chain signature verification in the
# smoke test. ed25519-dalek — Ed25519 signature verification for Solana
# off-chain verification.
k256        = { version = "0.13", default-features = false, features = ["ecdsa"] }
ed25519-dalek = "2"

[[bin]]
name = "evm-wallet"
path = "src/bin/evm-wallet.rs"

[[bin]]
name = "evm-sign-message"
path = "src/bin/evm-sign-message.rs"

[[bin]]
name = "evm-sign-typed-data"
path = "src/bin/evm-sign-typed-data.rs"

[[bin]]
name = "evm-sign-transaction"
path = "src/bin/evm-sign-transaction.rs"

[[bin]]
name = "evm-send-transaction"
path = "src/bin/evm-send-transaction.rs"

[[bin]]
name = "evm-recover-key-shares"
path = "src/bin/evm-recover-key-shares.rs"

[[bin]]
name = "svm-wallet"
path = "src/bin/svm-wallet.rs"

[[bin]]
name = "svm-sign-message"
path = "src/bin/svm-sign-message.rs"

[[bin]]
name = "svm-sign-transaction"
path = "src/bin/svm-sign-transaction.rs"

[[bin]]
name = "svm-send-transaction"
path = "src/bin/svm-send-transaction.rs"

[[bin]]
name = "delegated-sign-message"
path = "src/bin/delegated-sign-message.rs"

[[bin]]
name = "delegated-decrypt-webhook"
path = "src/bin/delegated-decrypt-webhook.rs"

[[bin]]
name = "omnibus-sweep"
path = "src/bin/omnibus-sweep.rs"
